workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  #minReadySeconds: 30
  selector:   
    matchLabels: 
      mylabelapp: queue
  replicas: 1
  template: 
    metadata:
      labels:
        mylabelapp: queue
    
    spec:
      containers:
      - name: queue
        image: richardchesterwood/k8s-fleetman-queue:resources
        resources:
          requests:
            memory: 300Mi #1Mi =1024ki 1ki =1024 bytes
            cpu: 100m
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  #minReadySeconds: 30
  selector:   
    matchLabels: 
      mylabelapp: position-simulator
  replicas: 1
  template: 
    metadata:
      labels:
        mylabelapp: position-simulator
    
    spec:
      containers:
      - name: position-simulator
        image: richardchesterwood/k8s-fleetman-position-simulator:resources
        resources:
          requests:
            memory: 200Mi #1Mi =1024ki 1ki =1024 bytes
            cpu: 50m
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  #minReadySeconds: 30
  selector:   
    matchLabels: 
      mylabelapp: webapp
  replicas: 1
  template: 
    metadata:
      labels:
        mylabelapp: webapp
    
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/k8s-fleetman-webapp-angular:release2
        resources:
          requests:
            memory: 200Mi #1Mi =1024ki 1ki =1024 bytes
            cpu: 50m
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
spec:
  #minReadySeconds: 30
  selector:   
    matchLabels: 
      mylabelapp: position-tracker
  replicas: 1
  template: 
    metadata:
      labels:
        mylabelapp: position-tracker
    
    spec:
      containers:
      - name:  position-tracker
        image: richardchesterwood/k8s-fleetman-position-tracker:resources
        resources:
          requests:
            memory: 200Mi #1Mi =1024ki 1ki =1024 bytes
            cpu: 50m
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  #minReadySeconds: 30
  selector:   
    matchLabels: 
      mylabelapp: api-gateway
  replicas: 3
  template: 
    metadata:
      labels:
        mylabelapp: api-gateway
    
    spec:
      containers:
      - name:  api-gateway
        image: richardchesterwood/k8s-fleetman-api-gateway:performance
        readinessProbe:
          httpGet:
            path: /
            port: 8080
       
        resources:
          requests:
            memory: 200Mi #1Mi =1024ki 1ki =1024 bytes
            cpu: 50m
