webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp

spec:
# this defines which pods are going to be represented by thise Service
# The service becomes a network endpoint for either of the services
# or may be  external users to connect to the browser

  selector:
    mylabelapp: webapp
    release: "0-5"
    
  ports:
    - name: http
      port: 80
      nodePort: 30080
  
  type: NodePort
