ingress-public.yaml
# from version v1.14 of k8s
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: public-routing
spec: 
  rules:
    - host: seanny.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
