ingress.yaml
# from version v1.14 of k8s
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mycredentials
    nginx.ingress.kubernetes.io/auth-realm: "Please get a password"
spec: 
  rules:
    - host: seanny.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
               
    - host: queue.seanny.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-queue
              servicePort: 8161
